# metal-playground

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: target_defaults.cmake
ios-glfm-app/: CMakeLists.txt  Info.plist  LaunchScreen.storyboard  main.cpp  simple_renderer.h  simple_renderer.mm  simple_shader_types.h  simple_shaders.metal
